Fix homework 8 task 8

--- a/exercises/lecture-08/index.html
+++ b/exercises/lecture-08/index.html
@@ -167,13 +167,12 @@ div{
     <style>
         h1 {
             display: inline-block;
-            white-space: nowrap;
-            /* Забороняє перенесення тексту */
         }
 
         span {
             display: block;
             /* Робить текст блочним, щоб його можна було перенести на новий рядок */
+            width: min-content;
         }
     </style>
 
