--- a/explore-and-travel/index.html
+++ b/explore-and-travel/index.html
@@ -29,8 +29,6 @@
         <section class="section" id="section1">
             <div>
                 <h1>Explore and Travel</h1>
-                <!-- <img id="pointer1" src="images/element2.png"> -->
-                <!-- <img id="pointer2" src="images/element3.png"> -->
                 <div class="search-form-container">
                     <p>Holiday finder</p>
                     <div class="sep"></div>
@@ -67,6 +65,9 @@
             <div class="thousand-01">
                 <img src="images/thousand-01 1.png" />
             </div>
+            <img id="element2" class="element" src="images/element2.png">
+            <img id="element3" class="element" src="images/element3.png">
+            <img id="element" class="element" src="images/element.png">
         </section>
         <section class="section" id="section2">
             <div class="thousand-02">
@@ -80,6 +81,8 @@
                 </p>
                 <button class="button" type="submit">Learn more</button>
             </div>
+            <img id="element4" class="element" src="images/element3.png">
+            <img id="element5" class="element" src="images/element.png">
         </section>
         <section class="section" id="section3">
             <div class="features-destinations-header">
@@ -116,25 +119,165 @@
                     </div>
                 </div>
             </div>
-
+            <img id="element6" class="element" src="images/element3.png">
+            <img id="element7" class="element" src="images/element.png">
+            <img id="element8" class="element" src="images/element.png">
         </section>
         <section class="section" id="section4">
             <div class="thousand-03-text">
                 <h2>Guides by Thousand <br>Sunny </h2>
                 <p>
-                    Packed with tips and advice from our on-the-ground experts, our city guides app (iOS and Android) is the ultimate resource before and during a trip.
+                    Packed with tips and advice from our on-the-ground experts, our city guides app (iOS and Android) is
+                    the ultimate resource before and during a trip.
                 </p>
                 <button class="button" type="submit">Dowload</button>
             </div>
             <div class="thousand-03">
                 <img src="images/Thousand-03.png" />
             </div>
+            <img id="element9" class="element" src="images/element3.png">
+            <img id="element10" class="element" src="images/element3.png">            
+            <img id="element11" class="element" src="images/element.png">
+        </section>
+        <section class="section" id="section5">
+            <div class="testimonials-text">
+                <h2>Testimonials</h2>
+                <div class="testimonials-desc">
+                    <p class="testimonials-text-stars">
+                        <img src="images/Frame.png" />
+                        <img src="images/Frame.png" />
+                        <img src="images/Frame.png" />
+                        <img src="images/Frame.png" />
+                        <img src="images/Frame.png" />
+                    </p>
+                    <p class="testimonials-desc-info">
+                        “Quisque in lacus a urna fermentum euismod. Integer mi nibh, dapibus ac scelerisque eu,
+                        facilisis quis purus. Morbi blandit sit amet turpis nec”
+                    </p>
+                    <p class="testimonials-desc-author">Edward Newgate</p>
+                    <p class="testimonials-desc-title">Founder Circle</p>
+                </div>
+            </div>
+            <div class="testimonials-img">
+                <img src="images/image 6.png" />
+                <div class="testimonials-img-controls">
+                    <a href="#">
+                        <img alt="previous" src="images/previous.png" />
+                        <span></span>
+                    </a>
+                    <a href="#">
+                        <img alt="next" src="images/next.png" />
+                        <span></span>
+                    </a>
+                </div>
+            </div>
+            <img id="element12" class="element" src="images/element.png">
+            <img id="element13" class="element" src="images/element2.png">            
+            <img id="element14" class="element" src="images/element4.png">
+        </section>
+
+        <section class="section" id="section6">
+            <div class="trending-stories-header">
+                <h2>Trending stories</h2>
+                <a href="#">View all ></a>
+            </div>
+            <div class="trending-stories-block">
+                <div class="trending-stories-block-item">
+                    <div class="trending-stories-block-img-container">
+                        <img src="images/image 12.png">
+                    </div>
+                    <p class="trending-stories-block-title">The many benefits of taking a healing holiday</p>
+                    <p class="trending-stories-block-desc">‘Helaing holidays’ are on the rise tohelp maximise your
+                        health and happines...</p>
+                    <p class="trending-stories-block-readmore"><a href="#">Read more</a></p>
+                </div>
+                <div class="trending-stories-block-item">
+                    <div class="trending-stories-block-img-container">
+                        <img src="images/image 13.png">
+                    </div>
+                    <p class="trending-stories-block-title">The best Kyoto restaurant to try Japanese food</p>
+                    <p class="trending-stories-block-desc">From tofu to teahouses, here’s our guide to Kyoto’s best
+                        restaurants to visit...</p>
+                    <p class="trending-stories-block-readmore"><a href="#">Read more</a></p>
+                </div>
+                <div class="trending-stories-block-item">
+                    <div class="trending-stories-block-img-container">
+                        <img src="images/image 14.png">
+                    </div>
+                    <p class="trending-stories-block-title">Skip Chichen Itza and head to this remote Yucatan</p>
+                    <p class="trending-stories-block-desc">It’s remote and challenging to get, but braving the jungle
+                        and exploring these ruins without the...</p>
+                    <p class="trending-stories-block-readmore"><a href="#">Read more</a></p>
+                </div>
+                <div class="trending-stories-block-item">
+                    <div class="trending-stories-block-img-container">
+                        <img src="images/image 15.png">
+                    </div>
+                    <p class="trending-stories-block-title">Surf’s up at these beginner spots around the world</p>
+                    <p class="trending-stories-block-desc">If learning to surf has in on your to-do list for a while,
+                        the good news is: it’s never too late...</p>
+                    <p class="trending-stories-block-readmore"><a href="#">Read more</a></p>
+                </div>
+            </div>
+            <img id="element15" class="element" src="images/element.png">
+            <img id="element16" class="element" src="images/element.png">            
+            <img id="element17" class="element" src="images/element3.png">
         </section>
     </main>
-    <footer class="footer">Footer</footer>
-    <div>
+    <footer class="footer">
+        <div id="footer-block-1">
+            <div id="footer-info">
+                <img src="images/logo.png">
+                <p>
+                    Plan and book your perfect trip with expert advice, travel tips destination information from us
+                </p>
+                <p>
+                    ©2020 Thousand Sunny. All rights reserved
+                </p>
+            </div>
+            <div class="footer-links">
+                <p>Destinations</p>
+                <ul>
+                    <li><a href="#">Africa</a></li>
+                    <li><a href="#">Antarctica</a></li>
+                    <li><a href="#">Asia</a></li>
+                    <li><a href="#">Europe</a></li>
+                    <li><a href="#">America</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <p>Shop</p>
+                <ul>
+                    <li><a href="#">Destination Guides</a></li>
+                    <li><a href="#">Pictorial & Gifts</a></li>
+                    <li><a href="#">Special Offers</a></li>
+                    <li><a href="#">Delivery Times</a></li>
+                    <li><a href="#">FAQs</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <p>Interests</p>
+                <ul>
+                    <li><a href="#">Adventure Travel</a></li>
+                    <li><a href="#">Art And Culture</a></li>
+                    <li><a href="#">Wildlife And Nature</a></li>
+                    <li><a href="#">Family Holidays</a></li>
+                    <li><a href="#">Food And Drink</a></li>
+                </ul>
 
-    </div>
+            </div>
+        </div>
+        <div id="footer-block-2"> 
+            <ul>
+                <li><a href="https://twitter.com/"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a></li>                
+                <li><a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a></li>
+            </ul>
+        </div>
+
+    </footer>
 </body>
 
 </html>
