Final project improvements

--- a/explore-and-travel/index.html
+++ b/explore-and-travel/index.html
@@ -21,15 +21,17 @@
 <body>
     <header class="navbar">
         <div class="logo">
-            <img src="images/logo.png" />
+            <a href="/AlexPihorieva/explore-and-travel"><img src="images/logo.svg" /></a>
         </div>
         <nav class="nav-links">
-            <a class="menu-item active" href="#">Home</a>
-            <a class="menu-item" href="#">Destinations</a>
-            <a class="menu-item" href="#">About</a>
-            <a class="menu-item" href="#">Partner</a>
-            <a class="button transparent-button" href="#">Login</a>
-            <a class="button" href="#">Register</a>
+            <ul>
+                <li><a class="menu-item active" href="#">Home</a></li>
+                <li><a class="menu-item" href="#">Destinations</a></li>
+                <li><a class="menu-item" href="#">About</a></li>
+                <li><a class="menu-item" href="#">Partner</a></li>
+                <li><a class="button login-button" href="#">Login</a></li>
+                <li><a class="button register-button" href="#">Register</a></li>
+            </ul>
         </nav>
     </header>
     <main class="main">
@@ -63,7 +65,7 @@
                             </select>
                             <input type="text" name="date" id="dateSelect" placeholder="Select Date">
                         </div>
-                        <button class="button" type="submit">Explore</button>
+                        <button class="button button-big" type="submit">Explore</button>
                     </form>
                     <div id="formErrorModal" class="modal">
                         <div class="modal-content">
@@ -77,9 +79,9 @@
             <div class="thousand-01">
                 <img src="images/thousand-01 1.png" />
             </div>
-            <img id="element2" class="element" src="images/element2.png">
-            <img id="element3" class="element" src="images/element3.png">
-            <img id="element" class="element" src="images/element.png">
+            <img id="element2" class="element" src="images/element2.svg">
+            <img id="element3" class="element" src="images/element3.svg">
+            <img id="element" class="element" src="images/element.svg">
         </section>
         <section class="section" id="section2">
             <div class="thousand-02">
@@ -91,10 +93,10 @@
                     For decades travellers have reached for Lonely Planet books when looking to plan and execute their
                     perfect trip, but now, they can also let Lonely Planet Experiences lead the way
                 </p>
-                <button class="button" type="submit">Learn more</button>
+                <a class="button button-big" href="#">Learn more</a>
             </div>
-            <img id="element4" class="element" src="images/element3.png">
-            <img id="element5" class="element" src="images/element.png">
+            <img id="element4" class="element" src="images/element3.svg">
+            <img id="element5" class="element" src="images/element.svg">
         </section>
         <section class="section" id="section3">
             <div class="features-destinations-header">
@@ -131,9 +133,9 @@
                     </div>
                 </div>
             </div>
-            <img id="element6" class="element" src="images/element3.png">
-            <img id="element7" class="element" src="images/element.png">
-            <img id="element8" class="element" src="images/element.png">
+            <img id="element6" class="element" src="images/element3.svg">
+            <img id="element7" class="element" src="images/element.svg">
+            <img id="element8" class="element" src="images/element.svg">
         </section>
         <section class="section" id="section4">
             <div class="thousand-03-text">
@@ -142,25 +144,25 @@
                     Packed with tips and advice from our on-the-ground experts, our city guides app (iOS and Android) is
                     the ultimate resource before and during a trip.
                 </p>
-                <button class="button" type="submit">Dowload</button>
+                <a class="button button-big" href="media/travel-advices.txt" download>Dowload</a>
             </div>
             <div class="thousand-03">
                 <img src="images/Thousand-03.png" />
             </div>
-            <img id="element9" class="element" src="images/element3.png">
-            <img id="element10" class="element" src="images/element3.png">            
-            <img id="element11" class="element" src="images/element.png">
+            <img id="element9" class="element" src="images/element3.svg">
+            <img id="element10" class="element" src="images/element3.svg">            
+            <img id="element11" class="element" src="images/element.svg">
         </section>
         <section class="section" id="section5">
             <div class="testimonials-text">
                 <h2>Testimonials</h2>
                 <div class="testimonials-desc">
                     <p class="testimonials-text-stars">
-                        <img src="images/Frame.png" />
-                        <img src="images/Frame.png" />
-                        <img src="images/Frame.png" />
-                        <img src="images/Frame.png" />
-                        <img src="images/Frame.png" />
+                        <img src="images/Frame.svg" />
+                        <img src="images/Frame.svg" />
+                        <img src="images/Frame.svg" />
+                        <img src="images/Frame.svg" />
+                        <img src="images/Frame.svg" />
                     </p>
                     <p class="testimonials-desc-info">
                         “Quisque in lacus a urna fermentum euismod. Integer mi nibh, dapibus ac scelerisque eu,
@@ -172,10 +174,6 @@
             </div>
             <div class="testimonials-img">
                 <img  src="images/image 6.png" />
-                <img class="hidden" src="images/tr1.png" />
-                <img class="hidden" src="images/tr2.png" />
-                <img class="hidden" src="images/tr3.png" />
-                <img class="hidden" src="images/tr4.png" />
                 <div class="testimonials-img-controls">
                     <a id="prev-img" href="#">
                         <img alt="previous" src="images/previous.png" />
@@ -235,20 +233,20 @@
                     <p class="trending-stories-block-readmore"><a href="#">Read more</a></p>
                 </div>
             </div>
-            <img id="element15" class="element" src="images/element.png">
-            <img id="element16" class="element" src="images/element.png">            
-            <img id="element17" class="element" src="images/element3.png">
+            <img id="element15" class="element" src="images/element.svg">
+            <img id="element16" class="element" src="images/element.svg">            
+            <img id="element17" class="element" src="images/element3.svg">
         </section>
     </main>
     <footer class="footer">
         <div id="footer-block-1">
             <div id="footer-info">
-                <img src="images/logo.png">
+                <a href="/AlexPihorieva/explore-and-travel"><img src="images/logo.svg"></a>
                 <p>
                     Plan and book your perfect trip with expert advice, travel tips destination information from us
                 </p>
                 <p>
-                    ©2020 Thousand Sunny. All rights reserved
+                    ©2024 Thousand Sunny. All rights reserved
                 </p>
             </div>
             <div class="footer-links">
