--- a/explore-and-travel/index.html
+++ b/explore-and-travel/index.html
@@ -15,6 +15,8 @@
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
     <script src="main.js"></script>
+
+    <meta name="viewport" content="width=device-width, user-scalable=no">
         
 </head>
 
@@ -101,7 +103,7 @@
         <section class="section" id="section3">
             <div class="features-destinations-header">
                 <h2>Featured destinations</h2>
-                <a href="#">View all ></a>
+                <a href="#">View all &gt;</a>
             </div>
             <div class="features-destinations-block">
                 <div class="features-destinations-block-item">
@@ -193,7 +195,7 @@
         <section class="section" id="section6">
             <div class="trending-stories-header">
                 <h2>Trending stories</h2>
-                <a href="#">View all ></a>
+                <a href="#">View all &gt;</a>
             </div>
             <div class="trending-stories-block">
                 <div class="trending-stories-block-item">
